--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jaguar</title>
-    <link rel="icon" href="assets/img/Jaguar-logo-IG-ORIGINAL-FONDO-AMARILLO.ico">
+    <link rel="icon" href="/assets/img/index/Jaguar-logo-IG-ORIGINAL-FONDO-AMARILLO.ico">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
     <!-- header -->
      <header>
-        <a href="#" class="logo" ><img src="/assets/img/Jaguar-logo-IG-ORIGINAL-FONDO-AMARILLO.ico" alt="icono Jaguar restaurante"></i><span class="logo-text">Jaguar</span></a>
+        <a href="#" class="logo" ><img src="/assets/img/index/Jaguar-logo-IG-ORIGINAL-FONDO-AMARILLO.ico" alt="icono Jaguar restaurante"></i><span class="logo-text">Jaguar</span></a>
 
         <ul class="navlist">
             <li><a href="#home">Inicio</a></li>
             <li><a href="#about">Sobre nosotros</a></li>
-            <li><a href="#menu">Carta</a></li>
+            <li><a href="carta.html">Carta</a></li>
             <li><a href="#contact">Contacto</a></li>
         </ul> 
 
@@ -34,23 +34,20 @@
         </div>
 
         <div class="home-img">
-            <img src="assets/img/platos de la carta.jpg" alt="platos de carne de res, pollo y cerdo">
-        </div>
-        <!-- <a class="btn" href="assets/img/carta Jaguar.pdf" target="_blank">Nuestra carta<i class="bx bxs-right-arrow"></i></a> -->
-        
+            <img src="assets/img/index/platos de la carta.jpg" alt="platos de carne de res, pollo y cerdo">
+        </div>        
       </section>
 
      <!-- Productos -->
      <section class="menu" id="menu">
         <div class="middle-text">
             <h4>Nuestro Platos</h4>
-            <h2>Veamos algunos de nuestros deliciosos platos <br><span class="small-letters">oprime para ver detalles</span>
-            </h2>
+            <h2>Veamos algunos de nuestros deliciosos platos</h2>
         </div>
 
         <div class="menu-content">
             <div class="row">
-                <img src="assets/img/costillas en salsa bbq.jpg" alt="Costillas en salsa BBQ">
+                <img src="assets/img/index/costillas en salsa bbq.jpg" alt="Costillas en salsa BBQ">
                 <div class="text-content">
                     <h3>Costillas en salsa BBQ</h3>
                     <p>300 gr de costilla St. Louis bañadas 
@@ -60,7 +57,7 @@
             </div>
 
             <div class="row">
-                <img src="assets/img/hamburguesa de res.jpg" alt="hamburguesa de res">
+                <img src="assets/img/index/hamburguesa de res.jpg" alt="Hamburguesa de res">
                 <div class="text-content">
                     <h3>Clásica Res</h3>
                     <p>Disfruta de nuestra carne artesanal 
@@ -70,31 +67,10 @@
                     <h6>$23.000</h6>
                 </div>
             </div>
-
-            <div class="row">
-                <img src="assets/img/medallones de cerdo.jpg" alt="Medallones de cerdo">
-                <div class="text-content">
-                    <h3>Medallones de cerdo en salsa Jaguar</h3>
-                    <p>2 medallones de cerdo 125 gr. c/u, 
-                        bañados con salsa de uchuvas y
-                        romero. Picante opcional.</p>
-                    <h6>$22.000</h6>
-                </div>
-            </div>
-
-            <div class="row">
-                <img src="assets/img/salmon.jpg" alt="Salmón">
-                <div class="text-content">
-                    <h3>Salmón</h3>
-                    <p>Delicioso filete de salmón a la 
-                        parrilla</p>
-                    <h6>$40.000</h6>
-                </div>
-            </div>
         </div>
 
         <div class="row-btn">
-            <a href="assets/img/carta Jaguar.pdf" target="_blank" class="btn">Toda nuestra Carta<i class="bx bxs-right-arrow"></i></a>
+            <a href="carta.html" class="btn">Toda nuestra Carta<i class="bx bxs-right-arrow"></i></a>
         </div> 
     </section>
     <!-- about -->
@@ -104,7 +80,7 @@
         <h2>¿Quiénes Somos?</h2>
         <div class="container-about">
         <div class="about-img">
-            <img src="assets/img/churrasco1.jpg" alt="Punta de Anca">
+            <img src="assets/img/index/churrasco1.jpg" alt="Punta de Anca">
         </div>
 
         <div class="about-text">
@@ -165,7 +141,7 @@
                 consequuntur unde dolore corrupti repellat officiis</p>
                 <div class="in-box">
                     <div class="bx-img">
-                        <img src="assets/img/cara1.jpg" alt="cara1">
+                        <img src="assets/img/index/cara1.jpg" alt="cara1">
                     </div>
                     <div class="bxx-text">
                         <h4>Juano Posada</h4>
@@ -186,7 +162,7 @@
                 consequuntur unde dolore corrupti repellat officiis</p>
                 <div class="in-box">
                     <div class="bx-img">
-                        <img src="assets/img/cara1.jpg" alt="cara1">
+                        <img src="assets/img/index/cara1.jpg" alt="cara1">
                     </div>
                     <div class="bxx-text">
                         <h4>Juano Posada</h4>
@@ -207,7 +183,7 @@
                 consequuntur unde dolore corrupti repellat officiis</p>
                 <div class="in-box">
                     <div class="bx-img">
-                        <img src="assets/img/cara1.jpg" alt="cara1">
+                        <img src="assets/img/index/cara1.jpg" alt="cara1">
                     </div>
                     <div class="bxx-text">
                         <h4>Juano Posada</h4>
